--- a/fastcalc/fastcalc/FastCalc/MainViewController.xib
+++ b/fastcalc/fastcalc/FastCalc/MainViewController.xib
@@ -13,8 +13,8 @@
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUISwipeGestureRecognizer</string>
 			<string>IBUIImageView</string>
-			<string>IBUILabel</string>
 			<string>IBProxyObject</string>
+			<string>IBUILabel</string>
 			<string>IBUITableViewController</string>
 			<string>IBUITableView</string>
 			<string>IBUIView</string>
@@ -62,7 +62,6 @@
 						<string key="NSFrame">{{15, 550}, {288, 264}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -112,74 +111,90 @@
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIView" id="696399524">
+					<object class="IBUIView" id="1071671357">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUITableView" id="658427827">
-								<reference key="NSNextResponder" ref="696399524"/>
+							<object class="IBUIView" id="696399524">
+								<reference key="NSNextResponder" ref="1071671357"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrameSize">{288, 370}</string>
-								<reference key="NSSuperview" ref="696399524"/>
+								<array class="NSMutableArray" key="NSSubviews">
+									<object class="IBUITableView" id="658427827">
+										<reference key="NSNextResponder" ref="696399524"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrameSize">{288, 370}</string>
+										<reference key="NSSuperview" ref="696399524"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="84019993"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<object class="NSColor" key="IBUIBackgroundColor" id="767901418">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MCAwAA</bytes>
+										</object>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<bool key="IBUIAlwaysBounceVertical">YES</bool>
+										<int key="IBUISeparatorStyle">1</int>
+										<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
+										<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
+										<float key="IBUIRowHeight">44</float>
+										<float key="IBUISectionHeaderHeight">22</float>
+										<float key="IBUISectionFooterHeight">22</float>
+									</object>
+									<object class="IBUILabel" id="84019993">
+										<reference key="NSNextResponder" ref="696399524"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{20, 379}, {248, 32}}</string>
+										<reference key="NSSuperview" ref="696399524"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="926368938"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<bool key="IBUIOpaque">NO</bool>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">7</int>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<string key="IBUIText">Итого</string>
+										<object class="NSColor" key="IBUITextColor">
+											<int key="NSColorSpace">1</int>
+											<bytes key="NSRGB">MCAwIDAAA</bytes>
+										</object>
+										<nil key="IBUIHighlightedColor"/>
+										<int key="IBUIBaselineAdjustment">0</int>
+										<float key="IBUIMinimumFontSize">10</float>
+										<object class="IBUIFontDescription" key="IBUIFontDescription">
+											<int key="type">2</int>
+											<double key="pointSize">20</double>
+										</object>
+										<object class="NSFont" key="IBUIFont">
+											<string key="NSName">Helvetica-Bold</string>
+											<double key="NSSize">20</double>
+											<int key="NSfFlags">16</int>
+										</object>
+									</object>
+								</array>
+								<string key="NSFrameSize">{288, 438}</string>
+								<reference key="NSSuperview" ref="1071671357"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="84019993"/>
+								<reference key="NSNextKeyView" ref="658427827"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MCAwAA</bytes>
+									<bytes key="NSWhite">MQA</bytes>
+									<reference key="NSCustomColorSpace" ref="616086423"/>
 								</object>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<bool key="IBUIAlwaysBounceVertical">YES</bool>
-								<int key="IBUISeparatorStyle">1</int>
-								<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
-								<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
-								<float key="IBUIRowHeight">44</float>
-								<float key="IBUISectionHeaderHeight">22</float>
-								<float key="IBUISectionFooterHeight">22</float>
-							</object>
-							<object class="IBUILabel" id="84019993">
-								<reference key="NSNextResponder" ref="696399524"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 379}, {248, 32}}</string>
-								<reference key="NSSuperview" ref="696399524"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="926368938"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Итого</string>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MCAwIDAAA</bytes>
-								</object>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">2</int>
-									<double key="pointSize">20</double>
-								</object>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">20</double>
-									<int key="NSfFlags">16</int>
-								</object>
 							</object>
 						</array>
 						<string key="NSFrame">{{16, 20}, {288, 438}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="658427827"/>
+						<reference key="NSNextKeyView" ref="494345736"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MQA</bytes>
-							<reference key="NSCustomColorSpace" ref="616086423"/>
-						</object>
+						<reference key="IBUIBackgroundColor" ref="767901418"/>
+						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 					<object class="IBUIImageView" id="97418279">
@@ -204,7 +219,7 @@
 				<string key="NSFrameSize">{320, 479}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="494345736"/>
+				<reference key="NSNextKeyView" ref="1071671357"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -232,6 +247,7 @@
 			</object>
 			<object class="IBUISwipeGestureRecognizer" id="31404327"/>
 			<object class="IBUISwipeGestureRecognizer" id="1048863470"/>
+			<object class="IBUISwipeGestureRecognizer" id="323454750"/>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<array class="NSMutableArray" key="connectionRecords">
@@ -258,22 +274,6 @@
 						<reference key="destination" ref="965269376"/>
 					</object>
 					<int key="connectionID">29</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">mTotalLbl</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="84019993"/>
-					</object>
-					<int key="connectionID">41</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">mCheckView</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="696399524"/>
-					</object>
-					<int key="connectionID">43</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -309,6 +309,30 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mGestureRecognizerLeft</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="323454750"/>
+					</object>
+					<int key="connectionID">56</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mCheckView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="696399524"/>
+					</object>
+					<int key="connectionID">43</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mTotalLbl</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="84019993"/>
+					</object>
+					<int key="connectionID">41</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
 						<reference key="source" ref="326047165"/>
 						<reference key="destination" ref="965269376"/>
@@ -325,14 +349,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">dataSource</string>
-						<reference key="source" ref="658427827"/>
-						<reference key="destination" ref="72799437"/>
-					</object>
-					<int key="connectionID">19</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="658427827"/>
 						<reference key="destination" ref="72799437"/>
@@ -341,11 +357,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">view</string>
-						<reference key="source" ref="72799437"/>
-						<reference key="destination" ref="658427827"/>
+						<string key="label">dataSource</string>
+						<reference key="source" ref="658427827"/>
+						<reference key="destination" ref="72799437"/>
 					</object>
-					<int key="connectionID">26</int>
+					<int key="connectionID">19</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -354,6 +370,14 @@
 						<reference key="destination" ref="658427827"/>
 					</object>
 					<int key="connectionID">51</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">view</string>
+						<reference key="source" ref="72799437"/>
+						<reference key="destination" ref="658427827"/>
+					</object>
+					<int key="connectionID">26</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -379,6 +403,14 @@
 					</object>
 					<int key="connectionID">50</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">gestureTaped:</string>
+						<reference key="source" ref="323454750"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">54</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -397,7 +429,7 @@
 							<reference ref="326047165"/>
 							<reference ref="97418279"/>
 							<reference ref="926368938"/>
-							<reference ref="696399524"/>
+							<reference ref="1071671357"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Main Scroll View</string>
@@ -438,28 +470,6 @@
 						<string key="objectName">Price View Mask</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">35</int>
-						<reference key="object" ref="696399524"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="658427827"/>
-							<reference ref="84019993"/>
-						</array>
-						<reference key="parent" ref="191373211"/>
-						<string key="objectName">Price View</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">36</int>
-						<reference key="object" ref="84019993"/>
-						<reference key="parent" ref="696399524"/>
-						<string key="objectName">Price Label</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">5</int>
-						<reference key="object" ref="658427827"/>
-						<reference key="parent" ref="696399524"/>
-						<string key="objectName">Price Table View</string>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">33</int>
 						<reference key="object" ref="926368938"/>
 						<reference key="parent" ref="191373211"/>
@@ -489,6 +499,42 @@
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Swipe Gesture Recognizer Up</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">52</int>
+						<reference key="object" ref="323454750"/>
+						<reference key="parent" ref="0"/>
+						<string key="objectName">Swipe Gesture Recognizer Left</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">57</int>
+						<reference key="object" ref="1071671357"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="696399524"/>
+						</array>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">35</int>
+						<reference key="object" ref="696399524"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="84019993"/>
+							<reference ref="658427827"/>
+						</array>
+						<reference key="parent" ref="1071671357"/>
+						<string key="objectName">Price View</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">36</int>
+						<reference key="object" ref="84019993"/>
+						<reference key="parent" ref="696399524"/>
+						<string key="objectName">Price Label</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">5</int>
+						<reference key="object" ref="658427827"/>
+						<reference key="parent" ref="696399524"/>
+						<string key="objectName">Price Table View</string>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -510,6 +556,8 @@
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="47.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="52.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="57.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.CustomClassName">PriceTableViewController</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -517,7 +565,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">51</int>
+			<int key="maxID">57</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -539,6 +587,7 @@
 						<string key="mAnimationView">UIView</string>
 						<string key="mCheckView">UIView</string>
 						<string key="mGestureRecognizerDown">UISwipeGestureRecognizer</string>
+						<string key="mGestureRecognizerLeft">UISwipeGestureRecognizer</string>
 						<string key="mGestureRecognizerUp">UISwipeGestureRecognizer</string>
 						<string key="mMainView">UIScrollView</string>
 						<string key="mTotalLbl">UILabel</string>
@@ -556,6 +605,10 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="mGestureRecognizerDown">
 							<string key="name">mGestureRecognizerDown</string>
+							<string key="candidateClassName">UISwipeGestureRecognizer</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="mGestureRecognizerLeft">
+							<string key="name">mGestureRecognizerLeft</string>
 							<string key="candidateClassName">UISwipeGestureRecognizer</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="mGestureRecognizerUp">
