--- a/fastcalc/fastcalc/FastCalc/MainViewController.xib
+++ b/fastcalc/fastcalc/FastCalc/MainViewController.xib
@@ -44,7 +44,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 317}, {320, 514}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="97418279"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -61,8 +60,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{15, 550}, {288, 264}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -82,7 +79,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{12, 546}, {296, 275}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="326047165"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -100,7 +96,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{16, 459}, {288, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="305558702"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -112,50 +107,27 @@
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIView" id="202801705">
+					<object class="IBUIView" id="461678569">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIView" id="696399524">
-								<reference key="NSNextResponder" ref="202801705"/>
+								<reference key="NSNextResponder" ref="461678569"/>
 								<int key="NSvFlags">292</int>
 								<array class="NSMutableArray" key="NSSubviews">
-									<object class="IBUITableView" id="658427827">
-										<reference key="NSNextResponder" ref="696399524"/>
-										<int key="NSvFlags">292</int>
-										<string key="NSFrameSize">{288, 370}</string>
-										<reference key="NSSuperview" ref="696399524"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="84019993"/>
-										<string key="NSReuseIdentifierKey">_NS:9</string>
-										<object class="NSColor" key="IBUIBackgroundColor" id="574765978">
-											<int key="NSColorSpace">3</int>
-											<bytes key="NSWhite">MCAwAA</bytes>
-										</object>
-										<bool key="IBUIClipsSubviews">YES</bool>
-										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<bool key="IBUIAlwaysBounceVertical">YES</bool>
-										<int key="IBUISeparatorStyle">1</int>
-										<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
-										<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
-										<float key="IBUIRowHeight">44</float>
-										<float key="IBUISectionHeaderHeight">22</float>
-										<float key="IBUISectionFooterHeight">22</float>
-									</object>
 									<object class="IBUILabel" id="84019993">
 										<reference key="NSNextResponder" ref="696399524"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{20, 379}, {248, 32}}</string>
+										<string key="NSFrame">{{0, 357}, {288, 77}}</string>
 										<reference key="NSSuperview" ref="696399524"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="926368938"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
-										<int key="IBUIContentMode">7</int>
+										<int key="IBUIContentMode">5</int>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<string key="IBUIText">Итого</string>
+										<string key="IBUIText">      Итого</string>
 										<object class="NSColor" key="IBUITextColor">
 											<int key="NSColorSpace">1</int>
 											<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -173,10 +145,30 @@
 											<int key="NSfFlags">16</int>
 										</object>
 									</object>
+									<object class="IBUITableView" id="658427827">
+										<reference key="NSNextResponder" ref="696399524"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrameSize">{288, 370}</string>
+										<reference key="NSSuperview" ref="696399524"/>
+										<reference key="NSNextKeyView" ref="84019993"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<object class="NSColor" key="IBUIBackgroundColor" id="62128074">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MCAwAA</bytes>
+										</object>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<bool key="IBUIAlwaysBounceVertical">YES</bool>
+										<int key="IBUISeparatorStyle">1</int>
+										<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
+										<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
+										<float key="IBUIRowHeight">44</float>
+										<float key="IBUISectionHeaderHeight">22</float>
+										<float key="IBUISectionFooterHeight">22</float>
+									</object>
 								</array>
 								<string key="NSFrameSize">{288, 438}</string>
-								<reference key="NSSuperview" ref="202801705"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="461678569"/>
 								<reference key="NSNextKeyView" ref="658427827"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -185,16 +177,14 @@
 									<reference key="NSCustomColorSpace" ref="616086423"/>
 								</object>
 								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
 						<string key="NSFrame">{{16, 20}, {288, 438}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="696399524"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<reference key="IBUIBackgroundColor" ref="574765978"/>
+						<reference key="IBUIBackgroundColor" ref="62128074"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
@@ -203,8 +193,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 397}, {320, 120}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="202801705"/>
+						<reference key="NSNextKeyView" ref="461678569"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">4</int>
@@ -219,7 +208,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 479}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="494345736"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -248,7 +236,7 @@
 			</object>
 			<object class="IBUISwipeGestureRecognizer" id="31404327"/>
 			<object class="IBUISwipeGestureRecognizer" id="1048863470"/>
-			<object class="IBUISwipeGestureRecognizer" id="314156321"/>
+			<object class="IBUISwipeGestureRecognizer" id="104804246"/>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<array class="NSMutableArray" key="connectionRecords">
@@ -312,7 +300,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">mGestureRecognizerLeft</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="314156321"/>
+						<reference key="destination" ref="104804246"/>
 					</object>
 					<int key="connectionID">56</int>
 				</object>
@@ -331,6 +319,14 @@
 						<reference key="destination" ref="84019993"/>
 					</object>
 					<int key="connectionID">41</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mMaskView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="461678569"/>
+					</object>
+					<int key="connectionID">58</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -407,7 +403,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">gestureTaped:</string>
-						<reference key="source" ref="314156321"/>
+						<reference key="source" ref="104804246"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">54</int>
@@ -430,7 +426,7 @@
 							<reference ref="326047165"/>
 							<reference ref="97418279"/>
 							<reference ref="926368938"/>
-							<reference ref="202801705"/>
+							<reference ref="461678569"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Main Scroll View</string>
@@ -502,13 +498,13 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">52</int>
-						<reference key="object" ref="314156321"/>
+						<reference key="object" ref="104804246"/>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Swipe Gesture Recognizer Left</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">57</int>
-						<reference key="object" ref="202801705"/>
+						<reference key="object" ref="461678569"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="696399524"/>
 						</array>
@@ -522,7 +518,7 @@
 							<reference ref="84019993"/>
 							<reference ref="658427827"/>
 						</array>
-						<reference key="parent" ref="202801705"/>
+						<reference key="parent" ref="461678569"/>
 						<string key="objectName">Price View</string>
 					</object>
 					<object class="IBObjectRecord">
@@ -567,107 +563,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">57</int>
+			<int key="maxID">58</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">MainViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">gestureTaped:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">gestureTaped:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">gestureTaped:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="mAnimationView">UIView</string>
-						<string key="mCheckView">UIView</string>
-						<string key="mGestureRecognizerDown">UISwipeGestureRecognizer</string>
-						<string key="mGestureRecognizerLeft">UISwipeGestureRecognizer</string>
-						<string key="mGestureRecognizerUp">UISwipeGestureRecognizer</string>
-						<string key="mMainView">UIScrollView</string>
-						<string key="mTotalLbl">UILabel</string>
-						<string key="menuTableViewController">MenuTableViewController</string>
-						<string key="priceTableViewController">PriceTableViewController</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="mAnimationView">
-							<string key="name">mAnimationView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mCheckView">
-							<string key="name">mCheckView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mGestureRecognizerDown">
-							<string key="name">mGestureRecognizerDown</string>
-							<string key="candidateClassName">UISwipeGestureRecognizer</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mGestureRecognizerLeft">
-							<string key="name">mGestureRecognizerLeft</string>
-							<string key="candidateClassName">UISwipeGestureRecognizer</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mGestureRecognizerUp">
-							<string key="name">mGestureRecognizerUp</string>
-							<string key="candidateClassName">UISwipeGestureRecognizer</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mMainView">
-							<string key="name">mMainView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mTotalLbl">
-							<string key="name">mTotalLbl</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="menuTableViewController">
-							<string key="name">menuTableViewController</string>
-							<string key="candidateClassName">MenuTableViewController</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="priceTableViewController">
-							<string key="name">priceTableViewController</string>
-							<string key="candidateClassName">PriceTableViewController</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MainViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">MenuTableViewController</string>
-					<string key="superclassName">UITableViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MenuTableViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PriceTableViewController</string>
-					<string key="superclassName">UITableViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">mTableView</string>
-						<string key="NS.object.0">UITableView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">mTableView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">mTableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PriceTableViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
